# protoserver

./: CMakeLists.txt  main.cpp  proto_compile.sh  query.proto  searchservice_function.h  searchservice_sayhello.cpp  searchservice_sayhello.h  searchservice_search.cpp  searchservice_search.h
py/: client.py
ssl/: client-bad.crt  client-bad.pem  client.crt  client.csr  client.pem  domain.crt  domain.csr  domain.key  domain.srl
